Fix contact info

--- a/index.html
+++ b/index.html
@@ -2454,7 +2454,7 @@
     
     <li>
       <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
-      <span id="person-email"><a href="mailto:nick.musselwhite@lgmail.com">nick.musselwhite@lgmail.com</a></span>
+      <span id="person-email"><a href="mailto:nick.musselwhite@gmail.com">nick.musselwhite@gmail.com</a></span>
     </li>
     
 
